Some extra changes to help debug the issue.
This commit adds a log message to say how many objects
have been parsed (shown every 1000 objects). It also
adds some GC statistics output.